# dbt-score

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .renovaterc.json  .secrets.baseline  404.html  CHANGELOG.md  CNAME  LICENSE.txt  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-uv-lock.yml  docs.yml  release.yml
configuration/: index.html
contributing/: index.html
create_rules/: index.html
docs/: CNAME  CONTRIBUTING.md  configuration.md  contributing.md  create_rules.md  get_started.md  getting_started.md  index.md  package_rules.md  programmatic_invocations.md  rules.md  seed.md
docs/reference/: cli.md  config.md  config_parser.md  dbt_utils.md  evaluation.md  exceptions.md  models.md  rule.md  rule_registry.md  scoring.md
docs/reference/formatters/: human_readable_formatter.md  index.md  json_formatter.md  manifest_formatter.md
docs/reference/rules/: generic.md
docs/rules/: filters.md  generic.md  macros.md
get_started/: index.html
package_rules/: index.html
programmatic_invocations/: index.html
reference/cli/: index.html
reference/config/: index.html
reference/dbt_utils/: index.html
reference/evaluation/: index.html
reference/exceptions/: index.html
reference/formatters/: index.html
reference/formatters/human_readable_formatter/: index.html
reference/formatters/json_formatter/: index.html
reference/formatters/manifest_formatter/: index.html
reference/models/: index.html
reference/rule/: index.html
reference/rule_registry/: index.html
reference/scoring/: index.html
rules/filters/: index.html
rules/generic/: index.html
rules/macros/: index.html
search/: search_index.json
src/dbt_score/: __init__.py  __main__.py  cli.py  config.py  config_parser.py  dbt_utils.py  definitions.py  evaluation.py  exceptions.py  lint.py  manifest.py  model_filter.py  models.py  more_itertools.py  parse.py  registry.py  rule.py  rule_catalog.py  rule_filter.py  rule_registry.py  scoring.py  utils.py
src/dbt_score/formatters/: __init__.py  ascii_formatter.py  human_readable_formatter.py  json_formatter.py  manifest_formatter.py
src/dbt_score/rules/: __init__.py  example.py  example_rules.py  filters.py  generic.py  macros.py  rules.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dbt_utils.py  test_evaluation.py  test_generic_rules.py  test_lint.py  test_main.py  test_model_filter.py  test_models.py  test_more_itertools.py  test_rule.py  test_rule_catalog.py  test_rule_filter.py  test_rule_registry.py  test_scorer.py  test_scoring.py  test_seed_rules.py
tests/formatters/: test_ascii_formatter.py  test_human_readable_formatter.py  test_json_formatter.py  test_manifest_formatter.py
tests/resources/: invalid_pyproject.toml  manifest.json  manifest_chain.json  manifest_empty.json  pyproject.toml
tests/rules/: example.py  rule_filters.py  rules.py
tests/rules/imported/: __init__.py  imported.py  original.py
tests/rules/nested/: __init__.py  example.py
tests/rules_library/: test_macro_rules.py
